CFTPROJECTtemplate.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: StackSet template to create a basic VPC with public and private subnets, NAT, and an RDS MySQL DB

Parameters:
  MyVpcCidr:
    Type: String
    Description: "CIDR block for the VPC"
    Default: "10.0.0.0/16"
    AllowedValues:
      - "10.0.0.0/16"
      - "20.0.0.0/18"
  MyDBSubnetGroupName:
    Type: String
    Description: "Name for the DB Subnet Group"
    Default: "MyDBSubnetGroup"
  MyDBName:
    Type: String
    Description: "Name for the MySQL Database"
    Default: "MySQLDatabase"
  MyDBRootUserName:
    Type: String
    Description: "Root username for the MySQL Database"
    Default: "admin"
  MyDBRootUserPassword:
    Type: String
    Description: "Root password for the MySQL Database"
    Default: "adminadmin"
    NoEcho: true

Mappings:
  SubnetConfig:
    Vpc10:
      PublicSubnetAZ1CIDR: "10.0.0.0/20"
      PrivateSubnetAZ1CIDR1: "10.0.16.0/20"
      PrivateSubnetAZ1CIDR2: "10.0.32.0/20"
      PublicSubnetAZ2CIDR: "10.0.48.0/20"
      PrivateSubnetAZ2CIDR1: "10.0.64.0/20"
      PrivateSubnetAZ2CIDR2: "10.0.80.0/20"
    Vpc20:
      PublicSubnetAZ1CIDR: "20.0.0.0/22"
      PrivateSubnetAZ1CIDR1: "20.0.4.0/22"
      PrivateSubnetAZ1CIDR2: "20.0.8.0/22"
      PublicSubnetAZ2CIDR: "20.0.12.0/22"
      PrivateSubnetAZ2CIDR1: "20.0.16.0/22"
      PrivateSubnetAZ2CIDR2: "20.0.20.0/22"

Conditions:
  is_cidr_10: !Equals [!Ref MyVpcCidr, "10.0.0.0/16"]

Resources:
  NewVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref MyVpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-My-VPC"

  NewIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Internet-Gateway"

  NewIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref NewVpc
      InternetGatewayId: !Ref NewIGW

  NewPubSub1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref NewVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !If
        - is_cidr_10
        - !FindInMap [SubnetConfig, "Vpc10", "PublicSubnetAZ1CIDR"]
        - !FindInMap [SubnetConfig, "Vpc20", "PublicSubnetAZ1CIDR"]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Public-Subnet-AZ1"

  NewPubSub2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref NewVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !If
        - is_cidr_10
        - !FindInMap [SubnetConfig, "Vpc10", "PublicSubnetAZ2CIDR"]
        - !FindInMap [SubnetConfig, "Vpc20", "PublicSubnetAZ2CIDR"]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Public-Subnet-AZ2"

  NewPriSub1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref NewVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !If
        - is_cidr_10
        - !FindInMap [SubnetConfig, "Vpc10", "PrivateSubnetAZ1CIDR1"]
        - !FindInMap [SubnetConfig, "Vpc20", "PrivateSubnetAZ1CIDR1"]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Private-Subnet-1-AZ1"

  NewPriSub2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref NewVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !If
        - is_cidr_10
        - !FindInMap [SubnetConfig, "Vpc10", "PrivateSubnetAZ1CIDR2"]
        - !FindInMap [SubnetConfig, "Vpc20", "PrivateSubnetAZ1CIDR2"]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Private-Subnet-2-AZ1"

  NewPriSub3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref NewVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !If
        - is_cidr_10
        - !FindInMap [SubnetConfig, "Vpc10", "PrivateSubnetAZ2CIDR1"]
        - !FindInMap [SubnetConfig, "Vpc20", "PrivateSubnetAZ2CIDR1"]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Private-Subnet-1-AZ2"

  NewPriSub4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref NewVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !If
        - is_cidr_10
        - !FindInMap [SubnetConfig, "Vpc10", "PrivateSubnetAZ2CIDR2"]
        - !FindInMap [SubnetConfig, "Vpc20", "PrivateSubnetAZ2CIDR2"]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Private-Subnet-2-AZ2"

  NewEIPForNat:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-NAT-EIP"

  NewNatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NewPubSub1
    Properties:
      ConnectivityType: public
      SubnetId: !Ref NewPubSub1
      AllocationId: !GetAtt NewEIPForNat.AllocationId
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-NAT-Gateway"

  NewPubRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref NewVpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Public-RT"

  NewPriRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref NewVpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Private-RT"

  NewPubRTAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NewPubSub1
      RouteTableId: !Ref NewPubRouteTable

  NewPubRTAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NewPubSub2
      RouteTableId: !Ref NewPubRouteTable

  NewPriRTAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NewPriSub1
      RouteTableId: !Ref NewPriRouteTable

  NewPriRTAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NewPriSub2
      RouteTableId: !Ref NewPriRouteTable

  NewPriRTAssoc3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NewPriSub3
      RouteTableId: !Ref NewPriRouteTable

  NewPriRTAssoc4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NewPriSub4
      RouteTableId: !Ref NewPriRouteTable

  NewPubDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: NewIGWAttachment
    Properties:
      RouteTableId: !Ref NewPubRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref NewIGW

  NewPriDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: NewNatGateway
    Properties:
      RouteTableId: !Ref NewPriRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NewNatGateway

  NewDBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Database SG"
      VpcId: !Ref NewVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-DB-SG"

  NewDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnets for MySQL"
      DBSubnetGroupName: !Ref MyDBSubnetGroupName
      SubnetIds:
        - !Ref NewPriSub2
        - !Ref NewPriSub4
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-DBSubnetGroup"

  NewMySQLDatabase:
    Type: AWS::RDS::DBInstance
    DependsOn: NewDBSubnetGroup
    Properties:
      DBInstanceIdentifier: !Ref MyDBName
      Engine: mysql
      EngineVersion: 8.0.36
      DBInstanceClass: db.t3.small
      AllocatedStorage: 20
      MasterUsername: !Ref MyDBRootUserName
      MasterUserPassword: !Ref MyDBRootUserPassword
      MultiAZ: true
      PubliclyAccessible: true
      VPCSecurityGroups:
        - !Ref NewDBSG
      DBSubnetGroupName: !Ref NewDBSubnetGroup
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-SQLDatabase"

  NewEKSClusterRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: EKSClusterRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: eks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
        - arn:aws:iam::aws:policy/AmazonEKSVPCResourceController
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-EKSCluster-Role"

  NewEKSNodeGroupRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: EKSNodeGroupRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPullOnly
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Policies:
        - PolicyName: EKSNodeGroupPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ec2:RunInstances"
                  - "ec2:DescribeInstances"
                  - "eks:DescribeNodegroup"
                  - "eks:CreateNodegroup"
                  - "eks:DeleteNodegroup"
                  - "ec2:AttachVolume"
                  - "ec2:CreateTags"
                  - "ec2:TerminateInstances"
                Resource: "*"
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-EKS-NodeGroupRole"

  NewEKSCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Name: MyEKSCluster
      RoleArn: !GetAtt NewEKSClusterRole.Arn
      ResourcesVpcConfig:
        SubnetIds:
          - !Ref NewPubSub1
          - !Ref NewPriSub2
          - !Ref NewPriSub1
          - !Ref NewPriSub2
          - !Ref NewPriSub3
          - !Ref NewPriSub4
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-EksCluster"

  NewNodeGroup:
    Type: AWS::EKS::Nodegroup
    Properties:
      ClusterName: !Ref NewEKSCluster
      NodeRole: !GetAtt NewEKSNodeGroupRole.Arn
      Subnets:
        - !Ref NewPriSub1
        - !Ref NewPriSub3
      ScalingConfig:
        MinSize: 1
        MaxSize: 3
        DesiredSize: 2
      InstanceTypes:
        - t3.medium
      Tags:
        Name: !Sub "${AWS::StackName}-Node-group"

Outputs:
  RDSInstanceEndpoint:
    Description: "RDS Endpoint for MySQL Database"
    Value: !GetAtt NewMySQLDatabase.Endpoint.Address
